--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RGB Guessing Game</title>
+  <title>Color Game</title>
   <link rel="stylesheet" href="app.css">
 </head>
 <body>
-  <h1>RGB Guessing Game</h1>
+  <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
   <div id="container">
     <div class="square"></div>
     <div class="square"></div>
